# hibiki

./: .agignore  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPONENT_DEVELOPMENT_PLAN.md  DEVELOPMENT_LOG.md  LICENSE  MACUI_V4_ARCHITECTURE_SUMMARY.md  MACUI_V4_FINAL_REPORT.md  QUICK_START.md  README.ja.md  README.md  README.zh-CN.md  TABLEVIEW_INVESTIGATION_REPORT.md  TABLEVIEW_SOLUTION_REPORT.md  V4_SHOWCASE_SUMMARY.md  __init__.py  animation_showcase.py  api_comparison_test.py  app.py  button_click_test.py  button_event_debug.py  clean_counter_demo.py  complete_api_test.py  complexity_test.py  component_architecture_v4.py  debug_binding.py  debug_child_nodes.py  debug_component_vs_direct.py  debug_contextvar.py  debug_counter.py  debug_counter_logic.py  debug_detailed.py  debug_effect_creation.py  debug_get_box_failure.py  debug_label_creation.py  debug_object_inspection.py  debug_observer_context.py  debug_showcase.py  (+86 more)
.claude/: settings.local.json
components/: __init__.py  controls.py  layout.py
debug_tools/: advanced_crash_debug.py  crash_debugger.py  final_stability_test.py  memory_debug.py  minimal_nsview_test.py  object_lifecycle_debug.py  stability_test.py  ultimate_crash_prevention.py
docs/: ANIMATION_DESIGN_PRINCIPLES.md  API_REFERENCE.md  COMPONENT_CATALOG.md  COMPONENT_REFACTORING_COMPLETION_REPORT.md  COMPONENT_REFACTORING_PLAN.md  COMPONENT_REFACTORING_PROGRESS.md  CUSTOM_VIEW_GUIDE.md  HIBIKI_MUSIC_MVP_ARCHITECTURE.md  INTELLIGENT_MUSIC_PLAYER_PROJECT.md  LAYOUT_CLEANUP_REPORT.md  LAYOUT_ENGINE_V3_IMPLEMENTATION.md  LAYOUT_PROBLEM_INVESTIGATION.md  LAYOUT_SYSTEM_RESEARCH.md  QUICK_START.md  README.md  development_tips.md  hibiki_ui_enhancement_proposals.md  layout_system_architecture_issues.md  layout_system_fix_proposal.md  pyobjc-notes.md  screenshot_tool_development_journey.md  testing_strategy.md
examples/: README.md  README_TABLEVIEW.md  __init__.py  advanced_ui_debugging.py  always_present_tableview_test.py  animation_demo.py  button_click_debug.py  button_click_diagnostics.py  clean_tableview_test.py  component_validator.py  comprehensive_modern_test.py  counter_style_tableview.py  custom_view_demo.py  debug_constraint_test.py  demo_app.py  direct_tableview_test.py  enhanced_theme_demo.py  fixed_tableview_direct_test.py  hstack_fix_patch.py  hybrid_tableview_test.py  large_window_button_test.py  layout_engine_comprehensive_test.py  layout_fix_test.py  layout_integration_test.py  macui_demo_app.py  minimal_column_tableview_test.py  minimal_tableview_test.py  minimal_working_test.py  modern_components_test.py  new_layout_system_demo.py  no_frame_tableview_test.py  noframe_tableview_test.py  nsview_tableview_test.py  project_hub_app.py  project_hub_simple.py  raw_tableview_test.py  simple_layout_test.py  simple_modern_test.py  simple_outlineview_test.py  simple_tableview_test.py  (+22 more)
examples/advanced/: __init__.py
examples/basic/: 01_hello_world.py  02_reactive_basics.py  03_forms_and_inputs.py  README.md  counter.py  test_enhanced_textfield.py
examples/complete/: __init__.py  showcase.py
examples/complex/: README.md  test_outlineview_only.py  test_tabview_only.py
examples/display/: README.md  test_textarea_progressbar.py
examples/input/: README.md  test_selection_controls.py
examples/layout/: DEMO_GUIDE.md  README.md  comparison_demo.py  hybrid_gui_demo.py  (+9 more)
hibiki/: __init__.py
macui/: __init__.py  app.py  cli.py
macui_v4/: __init__.py
music/: .gitignore  PROJECT_STATUS.md  README.md  example_custom_components.py  main.py  pyproject.toml  test_scanner.py
music/assets/: convert_svg_to_png.py  create_simple_icons.py
music/src/hibiki/: __init__.py
music/src/hibiki/music/: __init__.py  main.py  main_v2_backup.py  pyproject.toml
music/src/hibiki/music/core/: __init__.py  app_state.py  logging.py  scanner.py
music/src/hibiki/music/core/player/: __init__.py  audio_player.py
music/src/hibiki/music/data/: database.py  models.py
music/src/hibiki/music/ui/: __init__.py  components.py  main_window.py
music/src/hibiki/music/ui/components/: __init__.py  image_container.py  modern_player.py  working_player.py
music/src/hibiki/music/ui/styling/: __init__.py  enhanced_styling.py
music/src/hibiki/music/ui/themes/: __init__.py  modern_theme.py
music/src/hibiki/music/utils/: __init__.py  config.py
test-project/: main.py
tests/: __init__.py
tools/: convert_prints_to_logging.py  safe_logging_converter.py  simple_test_converter.py
ui/: README.md  debug_tools_demo.py  pyproject.toml  showcase.py
ui/.claude/: settings.local.json
ui/examples/advanced/friends_circle/: __init__.py  components.py  friends_circle.py  models.py
ui/examples/basic/: 01_hello_world.py  02_reactive_basics.py  03_forms_and_inputs.py  04_layout.py  05_responsive_layout.py  06_dynamic_grid_columns.py  06_responsive_css_grid.py  07_static_grid_basic.py  08_modern_card_showcase.py  08_simple_responsive_grid.py  09_fixed_width_responsive_grid.py  09_table_view_example.py  12_comprehensive_style_demo.py  __init__.py  label_centering_test.py  rich_text_demo.py  test_colored_box.py
ui/examples/complete/: showcase.py
ui/examples/tutorials/: __init__.py
ui/src/hibiki/ui/: __init__.py
ui/src/hibiki/ui/components/: __init__.py  base_text_field.py  basic.py  button.py  checkbox.py  combobox.py  custom_view.py  forms.py  imageview.py  label.py  layout.py  popupbutton.py  progressbar.py  radiobutton.py  slider.py  switch.py  table_view.py  text_field_config.py  textarea.py  textfield.py
ui/src/hibiki/ui/core/: __init__.py  animation.py  api.py  base_view.py  binding.py  component.py  layout.py  managers.py  reactive.py  responsive.py  rich_text.py  styles.py  text_props.py
ui/src/hibiki/ui/debug/: __init__.py  cli.py  export_tools.py  layout_inspector.py  performance_monitor.py  tree_visualizer.py
ui/src/hibiki/ui/theme/: appearance.py  colors.py  fonts.py  theme_manager.py
ui/src/hibiki/ui/utils/: __init__.py  screenshot.py
ui/tests/: __init__.py  conftest.py
ui/tests/core/: test_component.py  test_reactive.py  test_styles.py
(+110 files in other folders)
